setup site so all previous functionality works

--- a/app/views/ads/destroy.html.erb
+++ b/app/views/ads/destroy.html.erb
@@ -1,2 +1,2 @@
-<h1>Ad#destroy</h1>
-<p>Find me in app/views/ad/destroy.html.erb</p>
+<h1>Ads#destroy</h1>
+<p>Find me in app/views/ads/destroy.html.erb</p>
