--- a/app/views/ads/create.html.erb
+++ b/app/views/ads/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Ad#create</h1>
-<p>Find me in app/views/ad/create.html.erb</p>
+<h1>Ads#create</h1>
+<p>Find me in app/views/ads/create.html.erb</p>
