--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Ad#index</h1>
-<p>Find me in app/views/ad/index.html.erb</p>
+<h1>Ads#index</h1>
+<p>Find me in app/views/ads/index.html.erb</p>
