--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nakedads</title>
-  <%= stylesheet_link_tag :all %>
+  <title>Ingidio</title>
+
+  <%= stylesheet_link_tag "main.css", :media => 'screen' %>
+  <%= stylesheet_link_tag "thickbox.css", :media => 'screen' %>
+  <%= stylesheet_link_tag "reset.css", :media => 'screen' %>
+
   <%= javascript_include_tag :defaults %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+  <%= javascript_include_tag 'jquery', 'application' %>
+
+
   <%= csrf_meta_tag %>
+  <style type="text/css">
+    body {
+      background: url('../images/page_bg.jpg') no-repeat center top #1b1b1c;
+    }
+  </style>
 </head>
 <body>
 
-<%= yield %>
+<div id="container">
+	<div id="header">
+		<div id="icon">
 
+			<img src="http://i1138.photobucket.com/albums/n526/ingidio/logo1-1.png" href="#">
+		</div>
+		<div id="popup">
+  		<div id="popwrap">
+ Ad Management Site
+    </div>
+	</div>
+</div>
+
+<div id="splash">
+   <div id="formwrap">
+
+<%= yield %>
+	</div>
+
+	<div id="uid"></div>
+	<div id="footer_bottom">
+	  <div class="copyright">© 2011 Ingidio - All rights reserved.
+<br>
+<br>
+<%= link_to "Ad List", ads_path %>
+ <br>
+         <%= render "layouts/login_items" %> |<%= render "layouts/corporations_login_item" %>
+        <br>
+        <%= link_to "Add ad", new_ad_path %>
+<!--<button>&nbsp;&nbsp;&nbsp;Players&nbsp;&nbsp;&nbsp;</button>
+<button>Advertisers</button>-->
+</div>
+<br>
+<!--
+  		<div class="platforms">
+				<ul>
+          <li><%= image_tag 'windows1.png',:media => 'screen' , :onmouseover => "this.src='/images/windows.png'", :onmouseout => "this.src='/images/windows1.png'"%>
+          <li><%= image_tag 'playstation1.png',:media => 'screen', :onmouseover => "this.src='/images/playstation.png'", :onmouseout => "this.src='/images/playstation1.png'" %>
+          <li><%= image_tag 'wii1.png',:media => 'screen' , :onmouseover => "this.src='/images/wii.png'", :onmouseout => "this.src='/images/wii1.png'"%>
+          <li><%= image_tag 'xbox1.png',:media => 'screen', :onmouseover => "this.src='/images/xbox.png'", :onmouseout => "this.src='/images/xbox1.png'" %>
+				</ul>
+			</div>-->
+</div>
+</div>
 </body>
 </html>
+
