--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 
   <%= javascript_include_tag :defaults %>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-  <%= javascript_include_tag 'jquery', 'application' %>
-
+<%= javascript_include_tag 'jquery-1.6.3.min', 'application' %>
+  <%= javascript_include_tag "rails" %>
+  <%= yield(:head) %>
 
   <%= csrf_meta_tag %>
   <style type="text/css">
@@ -25,7 +26,7 @@
 	<div id="header">
 		<div id="icon">
 
-			<img src="http://i1138.photobucket.com/albums/n526/ingidio/logo1-1.png" href="#">
+			<img src="http://i1138.photobucket.com/albums/n526/ingidio/logo1-1.png" href="/">
 		</div>
 		<div id="popup">
   		<div id="popwrap">
@@ -36,7 +37,9 @@
 
 <div id="splash">
    <div id="formwrap">
-
+    <% if flash[:error] %>
+     <%= flash[:error] %>
+     <% end %>
 <%= yield %>
 	</div>
 
